--- a/OrTimer/MainWindow.xaml
+++ b/OrTimer/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         ResizeMode="CanMinimize"
+        Icon="/Image/OrTimerIcon.ico"
         Title="OrTimer" Height="400" Width="320">
     <Window.Background>
         <SolidColorBrush Color="#F0F0F0"/>
