--- a/Timer/App.xaml
+++ b/Timer/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="OrTimer.App"
+﻿<Application x:Class="Timer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:OrTimer"
+             xmlns:local="clr-namespace:Timer"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
