--- a/Timer/MainWindow.xaml
+++ b/Timer/MainWindow.xaml
@@ -1,12 +1,11 @@
-﻿<Window x:Class="OrTimer.MainWindow"
+﻿<Window x:Class="Kchary.Timer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         ResizeMode="CanMinimize"
-        Icon="/Image/OrTimerIcon.ico"
-        Title="OrTimer" Height="400" Width="320">
+        Title="Timer" Height="400" Width="320">
     <Window.Background>
         <SolidColorBrush Color="#F0F0F0"/>
     </Window.Background>
