Modernize source code.

--- a/Timer/MainWindow.xaml
+++ b/Timer/MainWindow.xaml
@@ -7,46 +7,57 @@
         ResizeMode="CanMinimize"
         Title="Timer" Height="400" Width="320">
     <Window.Background>
-        <SolidColorBrush Color="#F0F0F0"/>
+        <SolidColorBrush Color="#F0F0F0" />
     </Window.Background>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="150"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="150" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="60" />
         </Grid.RowDefinitions>
         <Border BorderBrush="Silver" BorderThickness="10">
-            <Grid Grid.Row="0" Margin="10">
+            <Grid Margin="10">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="30"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="30" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="{Binding MinuteText}" FontSize="80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <TextBlock Grid.Column="1" Text="：" FontSize="80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <TextBlock Grid.Column="2" Text="{Binding SecondText}" FontSize="80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <TextBlock Grid.Column="0" Text="{Binding MinuteText}" FontSize="80" VerticalAlignment="Center"
+                           HorizontalAlignment="Center" />
+                <TextBlock Grid.Column="1" Text="：" FontSize="80" VerticalAlignment="Center"
+                           HorizontalAlignment="Center" />
+                <TextBlock Grid.Column="2" Text="{Binding SecondText}" FontSize="80" VerticalAlignment="Center"
+                           HorizontalAlignment="Center" />
             </Grid>
         </Border>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <Button Content="▲" Command="{Binding MinutePlusCommand}" FontSize="24" Width="35" Height="35" Margin="5"/>
-                <TextBlock Text="分" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5"/>
-                <Button Content="▼" Command="{Binding MinuteMinusCommand}" FontSize="24" Width="35" Height="35" Margin="5"/>
+                <Button Content="▲" Command="{Binding MinutePlusCommand}" FontSize="24" Width="35" Height="35"
+                        Margin="5" />
+                <TextBlock Text="分" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" />
+                <Button Content="▼" Command="{Binding MinuteMinusCommand}" FontSize="24" Width="35" Height="35"
+                        Margin="5" />
             </StackPanel>
             <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <Button Content="▲" Command="{Binding SecondPlusCommand}" FontSize="24" Width="35" Height="35" Margin="5"/>
-                <TextBlock Text="秒" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5"/>
-                <Button Content="▼" Command="{Binding SecondMinusCommand}" FontSize="24" Width="35" Height="35" Margin="5"/>
+                <Button Content="▲" Command="{Binding SecondPlusCommand}" FontSize="24" Width="35" Height="35"
+                        Margin="5" />
+                <TextBlock Text="秒" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" />
+                <Button Content="▼" Command="{Binding SecondMinusCommand}" FontSize="24" Width="35" Height="35"
+                        Margin="5" />
             </StackPanel>
         </Grid>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Height="40">
-            <Button Content="スタート" Command="{Binding StartButtonCommand}" FontSize="20" Width="80" Margin="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-            <Button Content="ストップ" Command="{Binding StopButtonCommand}" FontSize="20" Width="80" Margin="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-            <Button Content="リセット" Command="{Binding ResetButtonCommand}" FontSize="20" Width="80" Margin="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center"
+                    Height="40">
+            <Button Content="スタート" Command="{Binding StartButtonCommand}" FontSize="20" Width="80" Margin="5"
+                    VerticalContentAlignment="Center" HorizontalContentAlignment="Center" />
+            <Button Content="ストップ" Command="{Binding StopButtonCommand}" FontSize="20" Width="80" Margin="5"
+                    VerticalContentAlignment="Center" HorizontalContentAlignment="Center" />
+            <Button Content="リセット" Command="{Binding ResetButtonCommand}" FontSize="20" Width="80" Margin="5"
+                    VerticalContentAlignment="Center" HorizontalContentAlignment="Center" />
         </StackPanel>
     </Grid>
 </Window>
