--- a/Timer/App.xaml
+++ b/Timer/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Timer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-
     </Application.Resources>
 </Application>
