--- a/Timer/Views/MainWindow.xaml
+++ b/Timer/Views/MainWindow.xaml
@@ -1,9 +1,11 @@
-﻿<Window x:Class="Kchary.Timer.MainWindow"
+﻿<Window x:Class="Kchary.Timer.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewmodel="clr-namespace:Kchary.Timer.ViewModels"
         mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance viewmodel:MainWindowViewModel}"
         ResizeMode="CanMinimize"
         Title="Timer" Height="400" Width="320">
     <Window.Background>
